# binary-ext

./: .gitignore  README.md  binary-ext.cabal  binary-te.cabal  package.yaml  stack.yaml
src/Control/Monad/Error/: Map.hs
src/Data/Binary/: Bin.hs  Eat.hs  Food.hs  Nib.hs
src/Data/Binary/Conduit/: Base.hs  ByteOffset.hs  Get.hs  Put.hs
src/Data/Binary/Conduit/Get/: GetC.hs
src/Data/Binary/Conduit/Put/: PutC.hs  PutF.hs  PutS.hs
src/Data/Binary/Ext/: Get.hs  Put.hs
src/Data/Binary/Ext/Get/: GetC.hs
src/Data/Binary/Get/: Ext.hs
src/Data/Conduit/: Parsers.hs
src/Data/Conduit/Parsers/: Binary.hs  GetC.hs  PutS.hs  Text.hs
src/Data/Conduit/Parsers/Binary/: ByteOffset.hs  Get.hs  Put.hs
src/Data/Conduit/Parsers/Text/: Gen.hs  Parser.hs  TextOffset.hs
test/: Spec.hs
test/Data/Binary/Conduit/Get/: Spec.hs
test/Data/Binary/Conduit/Put/: Spec.hs
test/Data/Binary/Get/Ext/: Spec.hs
test/Data/Conduit/Parsers/Binary/Get/: Spec.hs
test/Data/Conduit/Parsers/Binary/Put/: Spec.hs
test/Data/Conduit/Parsers/Text/Parser/: Spec.hs
