name: binary-ext
version: 2.0
synopsis: An alternate with strong-typed errors for `Data.Binary.Get` monad from `binary` package.
description: An alternate with strong-typed errors for `Data.Binary.Get` monad from `binary` package.
homepage: https://github.com/A1-Triard/binary-ext#readme
license: Apache
license-file: LICENSE
author: Warlock <internalmike@gmail.com>
maintainer: Warlock <internalmike@gmail.com>
copyright: 2017 Warlock <internalmike@gmail.com>
category: Data, Parsing
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules: Data.Binary.Conduit.Get
                 , Data.Binary.Conduit.Put
  other-modules: Data.Binary.Conduit.Get.GetC
               , Data.Binary.Conduit.Put.PutF
  build-depends: base >= 4.7 && < 5
               , binary
               , bytestring
               , conduit >= 1.2.12
               , conduit-combinators
               , data-binary-ieee754
               , errors
               , exceptions
               , monad-control
               , monad-loops
               , mono-traversable
               , mtl
               , transformers
               , transformers-base
  default-extensions: BangPatterns
                    , DeriveFunctor
                    , FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , MultiParamTypeClasses
                    , StandaloneDeriving
                    , RankNTypes
                    , TypeFamilies
                    , UndecidableInstances
  ghc-options: -fmax-pmcheck-iterations=100000000 -O2 -Wall -Werror -fprint-potential-instances -fsimpl-tick-factor=110
  default-language: Haskell2010

test-suite binary-ext-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules: Data.Binary.Conduit.Get.Spec
  build-depends: base
               , HUnit
               , binary-ext
               , binary
               , bytestring
               , conduit >= 1.2.12
               , conduit-combinators
               , data-binary-ieee754
               , errors
               , exceptions
               , monad-control
               , monad-loops
               , mono-traversable
               , mtl
               , transformers
               , transformers-base
  default-extensions: BangPatterns
                    , DeriveFunctor
                    , FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , MultiParamTypeClasses
                    , OverloadedStrings
                    , StandaloneDeriving
                    , RankNTypes
                    , TypeFamilies
                    , UndecidableInstances
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=100000000 -O2 -Wall -Werror -fprint-potential-instances -fsimpl-tick-factor=110
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/A1-Triard/binary-ext
