name: binary-te
version: 0.1
synopsis: An alternate with strong-typed errors for `Data.Binary.Get` monad from `binary` library.
description: An alternate with strong-typed errors for `Data.Binary.Get` monad from `binary` library.
homepage: https://github.com/A1-Triard/binary-ext#readme
license: Apache
license-file: LICENSE
author: Warlock <internalmike@gmail.com>
maintainer: Warlock <internalmike@gmail.com>
copyright: 2017 Warlock <internalmike@gmail.com>
category: Data, Parsing
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules: Data.Binary.Ext.Get
                 , Data.Binary.Ext.Put
  other-modules: Data.Binary.Ext.Get.GetC
  build-depends: base >= 4.7 && < 5
               , binary
               , bytestring
               , conduit
               , conduit-combinators
               , data-binary-ieee754
               , errors
               , exceptions
               , monad-control
               , monad-loops
               , mono-traversable
               , mtl
               , transformers
               , transformers-base
  default-extensions: BangPatterns
                    , CPP
                    , DataKinds
                    , DefaultSignatures
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , EmptyCase
                    , EmptyDataDecls
                    , ExistentialQuantification
                    , ExplicitForAll
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , LambdaCase
                    , LiberalTypeSynonyms
                    , MagicHash
                    , MonadComprehensions
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NegativeLiterals
                    , OverloadedStrings
                    , ParallelListComp
                    , PatternSynonyms
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TransformListComp
                    , TypeFamilies
                    , TypeOperators
                    , UnboxedTuples
                    , UndecidableInstances
                    , UnicodeSyntax
                    , ViewPatterns
  include-dirs: include
  ghc-options: -fmax-pmcheck-iterations=100000000 -O2 -Wall -Werror -fno-warn-unused-imports -fprint-potential-instances
  default-language: Haskell2010

test-suite binary-te-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules: Data.Binary.Get.Ext.Spec
  build-depends: base
               , HUnit
               , binary-te
               , binary
               , bytestring
               , conduit
               , conduit-combinators
               , data-binary-ieee754
               , errors
               , exceptions
               , monad-control
               , monad-loops
               , mono-traversable
               , mtl
               , transformers
               , transformers-base
  default-extensions: BangPatterns
                    , CPP
                    , DataKinds
                    , DefaultSignatures
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , EmptyCase
                    , EmptyDataDecls
                    , ExistentialQuantification
                    , ExplicitForAll
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , LambdaCase
                    , LiberalTypeSynonyms
                    , MagicHash
                    , MonadComprehensions
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NegativeLiterals
                    , OverloadedStrings
                    , ParallelListComp
                    , PatternSynonyms
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TransformListComp
                    , TypeFamilies
                    , TypeOperators
                    , UnboxedTuples
                    , UndecidableInstances
                    , UnicodeSyntax
                    , ViewPatterns
  include-dirs: include
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=100000000 -O2 -Wall -Werror -fno-warn-unused-imports -fprint-potential-instances
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/A1-Triard/binary-te
